# texpodbot

./: .dockerignore  .env.chatwoot.compose-check.example  .env.chatwoot.production.example  .env.compose-check.example  .env.demo.example  .env.example  .env.local.example  .env.production.example  .env.vps.compose-check.example  .env.vps.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.demo.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
