[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "telegram-max-bot-template"
version = "0.1.0"
description = "Production-ready async Python bot template with Telegram and MAX adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4.0",
  "aiohttp>=3.12,<4.0",
  "aiohttp-socks>=0.9,<1.0",
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "psycopg2-binary>=2.9,<3.0",
  "pyyaml>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=5.2,<7.0",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<2.0",
  "ruff>=0.9,<1.0",
  "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
bot-app = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/bot", "src/domain", "src/infrastructure", "texpod_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "texpod_bot", "tests"]
extend-exclude = [".pytest-tmp-*", "tmp*/"]

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "RUF", "S", "UP", "W"]
ignore = ["RUF001", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["app", "bot", "domain", "infrastructure", "texpod_bot"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true
